<resources>
    <string name="app_name">DroidHub</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="droidhub_logo">DroidHub Logo</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or_sign_in">Or Sign In</string>
    <string name="login">Login</string>
    <string name="or_sign_up">Or Sign Up</string>
    <string name="your_files">Your files</string>
    <string name="add_files_button">Add Files button</string>
    <string name="add_a_file">Add a file</string>
    <string name="file_name_goes_here">File name goes here</string>
    <string name="choose_file">Choose file</string>
    <string name="upload_file">Upload file</string>
    <string name="name_error">Name is required</string>
    <string name="email_error">Please enter a valid email</string>
    <string name="password_error">Password should be more than 6 characters</string>
    <string name="login_success">Login successful</string>
    <string name="file_error">File name is required!</string>
    <string name="sign_out_use">Sign Out use</string>
    <string name="delete_item">Item deleted!</string>
    <string name="sign_in">Sign In</string>
</resources>