<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.signin.SignInFragment">
    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/margin"
        />
    <EditText
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loginTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/CustomEditText"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginTop="@dimen/margin_top_large"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="email"
        />
    <EditText
        android:id="@+id/userPassword"
        android:inputType="textPassword"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:hint="@string/password"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:layout_constraintStart_toStartOf="@id/userEmail"
        app:layout_constraintEnd_toEndOf="@id/userEmail"
        app:layout_constraintTop_toBottomOf="@id/userEmail"
        android:autofillHints="false" />
    <ProgressBar
        android:id="@+id/signInProgress"
        android:visibility="gone"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        app:layout_constraintTop_toBottomOf="@id/userPassword"
        app:layout_constraintStart_toStartOf="@id/userPassword"
        app:layout_constraintEnd_toEndOf="@id/userPassword"
        android:indeterminateTint="@color/color_primary"
        app:layout_constraintBottom_toTopOf="@id/signInButton"
        />
    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginTop="220dp"
        style="@style/CustomButton"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/userPassword"
        app:layout_constraintEnd_toEndOf="@id/userPassword"
        app:layout_constraintTop_toBottomOf="@id/userPassword"
        />
    <TextView
        android:id="@+id/navToSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/subtitle_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_top_large"
        app:layout_constraintStart_toStartOf="@id/signInButton"
        app:layout_constraintEnd_toEndOf="@id/signInButton"
        app:layout_constraintTop_toBottomOf="@id/signInButton"
        android:text="@string/or_sign_up"
        />
</androidx.constraintlayout.widget.ConstraintLayout>