<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.signup.SignUpFragment">
    <TextView
        android:id="@+id/signUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/margin"
        />
    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signUpTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginTop="@dimen/margin_top_large"
        android:autofillHints="text"
        android:ems="10"
        style="@style/CustomEditText"
        android:hint="@string/name"
        android:inputType="text|textCapWords"/>
    <EditText
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintStart_toStartOf="@id/userName"
        app:layout_constraintEnd_toEndOf="@id/userName"
        style="@style/CustomEditText"
        android:layout_margin="@dimen/margin"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="email"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordLayout"
        app:layout_constraintStart_toStartOf="@id/userEmail"
        app:layout_constraintEnd_toEndOf="@id/userEmail"
        app:layout_constraintTop_toBottomOf="@id/userEmail"
        style="@style/TextInputLayoutStyle"
        android:background="@drawable/gray_background"
        android:layout_margin="@dimen/margin"
        app:passwordToggleEnabled="true"
        android:hint="@string/password"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:id="@+id/signUpProgress"
        android:visibility="gone"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        app:layout_constraintStart_toStartOf="@id/passwordLayout"
        app:layout_constraintEnd_toEndOf="@id/passwordLayout"
        android:indeterminateTint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/signUpButton"
        />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginTop="200dp"
        android:textStyle="bold"
        style="@style/CustomButton"
        app:layout_constraintStart_toStartOf="@id/passwordLayout"
        app:layout_constraintEnd_toEndOf="@id/passwordLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        />
    <TextView
        android:id="@+id/navToSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/subtitle_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_top_large"
        app:layout_constraintStart_toStartOf="@id/signUpButton"
        app:layout_constraintEnd_toEndOf="@id/signUpButton"
        app:layout_constraintTop_toBottomOf="@id/signUpButton"
        android:text="@string/or_sign_in"
        />

</androidx.constraintlayout.widget.ConstraintLayout>